<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Estructura de como se mostrara la info en el recycler view-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tvNumEmpleado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvNumEmpleado"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvEstadoEmpleado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvEstadoEmpleado"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvNombreEmpleado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvNombreEmpleado"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvApellidoEmpleado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvApellidoEmpleado"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvTipDocEmpleado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvTipDocEmpleado"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvDireccionEmpleado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvDireccionEmpleado"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvTelefonoEmpleado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvTelefonoEmpleado"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvCorreoEmpleado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvCorreoEmpleado"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvNumSeguroEmpleado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvNumSeguroEmpleado"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvNumCargoEmpleado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvNumCargoEmpleado"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvSexoEmpleado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvSexoEmpleado"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvFechaRegistroEmpleado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvFechaRegistroEmpleado"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</RelativeLayout>