<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Estructura de como se mostrara la info en el recycler view-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tvNumMascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvNumMascota"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvEstadoMascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvEstadoMascota"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvNombreMascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvNombreMascota"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvNumEspecieMascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvNumEspecieMascota"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvFechaNacimientoMascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvFechaNacimientoMascota"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvRazaMascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvRazaMascota"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvColorMascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvColorMascota"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvSexoMascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvSexoMascota"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvDescripcionMascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvDescripcionMascota"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvFechaRegistroMascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvFechaRegistroMascota"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</RelativeLayout>