<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Estructura de como se mostrara la info en el recycler view-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tvNumCita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvNumCita"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvEstadoCita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvEstadoCita"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvNombreEmpleado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvNombreEmpleado"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvNombreCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvNombreCliente"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvNombrePaciente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvNombrePaciente"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvDescripcionCita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvDescripcionCita"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvFechaCita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvFechaCita"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</RelativeLayout>