<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Estructura de como se mostrara la info en el recycler view-->

    <TextView
        android:id="@+id/tvNumEnfermedad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNumAntecedente"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tvEstadoEnfermedad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvEstadoEnfermedad"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvEnfermedad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvEnfermedad"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvDescripcionEnfermedad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvDescripcionEnfermedad"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        android:layout_marginTop="10dp"/>

</LinearLayout>