<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/bg_bottom"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/micanlogo"
        tools:ignore="ContentDescription,ImageContrastCheck" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/tvLogin"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="30sp"
        tools:ignore="TextContrastCheck" />
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/white">
        
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            tools:ignore="ContentDescription" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/hint_login_user"
            android:inputType="textPersonName"
            android:textColor="@color/btn_no_press"
            android:textColorHint="@color/bg_bottom"
            android:textSize="20sp"
            tools:ignore="Autofill,TextContrastCheck" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="9dp"
            android:src="@drawable/ic_person"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            tools:ignore="ContentDescription" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/hint_login_password"
            android:inputType="textPassword"
            android:textColor="@color/btn_no_press"
            android:textColorHint="@color/bg_bottom"
            android:textSize="20sp"
            tools:ignore="Autofill,TextContrastCheck" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="9dp"
            android:src="@drawable/ic_lock"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <Button
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button"
        android:text="@string/btnLogin"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

</LinearLayout>