<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:background="@color/bg"
    tools:context=".AgendarCitaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/ivAgendarCita"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/citaicon"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/etNumCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/tvNumCliente"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="Autofill,TextFields,VisualLintTextFieldSize,TextContrastCheck" />

        <EditText
            android:id="@+id/etNumPaciente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/tvNumPaciente"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/etDescripcionCita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/tvDescripcionCita"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/etFechaCita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/tvFechaCita"
            android:inputType="date"
            android:focusable="false"
            android:clickable="true"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="Autofill,KeyboardInaccessibleWidget,TextFields,VisualLintTextFieldSize" />

    </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabGuardarCita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="25dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@color/btn_press"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_save"
            app:tint="@color/white"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,ImageContrastCheck" />

</RelativeLayout>