<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:background="@color/bg"
    tools:context=".CambiarContrasenaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/ivCambiarContrasena"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/contrasenaicon"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/etContrasenaActual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:hint="@string/etContrasenaActual"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:singleLine="true"
            tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/etNuevaContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:hint="@string/etNuevaContrasena"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:singleLine="true"
            tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/etConfirmarNuevaContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:hint="@string/etConfirmarNuevaContrasena"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:singleLine="true"
            tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabGuardarContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="25dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/btn_press"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_save"
        app:tint="@color/white"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,ImageContrastCheck" />

</RelativeLayout>